feat: admin annotation
